--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "laneswap"
-version = "0.1.0"
+version = "0.1.2"
 description = "A heartbeat monitoring system for distributed services"
 readme = "README.md"
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "LaneSwap Team", email = "laneswap@example.com"}
 ]
 license = {text = "MIT"}
 classifiers = [
@@ -31,6 +31,7 @@ dependencies = [
     "motor>=3.1.0",
     "aiohttp>=3.8.0",
     "tabulate>=0.9.0",
+    "python-dateutil>=2.8.2",
 ]
 
 [project.optional-dependencies]
@@ -43,9 +44,9 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/laneswap"
-Documentation = "https://github.com/yourusername/laneswap#readme"
-Issues = "https://github.com/yourusername/laneswap/issues"
+Homepage = "https://github.com/laneswap/laneswap"
+Documentation = "https://github.com/laneswap/laneswap#readme"
+Issues = "https://github.com/laneswap/laneswap/issues"
 
 [project.scripts]
 laneswap = "laneswap.cli.commands:main"
